Code cleaned and comments added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Color picker</title>
   </head>
   <body>
+    <!-- Form to choose color and scheme -->
     <div
       class="w-[550px] h-[550px] mx-auto mt-10"
     >
@@ -43,32 +44,10 @@
           </button>
         </form>
       </div>
+
+
       <div class="grid grid-cols-5 grid-rows-2" id="colors-displayed">
-        <div class="bg-zinc-900 w-[110px] h-[414px]"></div>
-        <div class="bg-zinc-700 w-[110px] h-[414px]"></div>
-        <div class="bg-zinc-500 w-[110px] h-[414px]"></div>
-        <div class="bg-zinc-300 w-[110px] h-[414px"></div>
-        <div class="bg-zinc-100 w-[110px] h-[414px]"></div>
-        <div
-          class="bg-slate-100 w-[110px] h-[43px] flex items-center justify-center"
-        >zinc900
-      </div>
-        <div
-          class="bg-slate-100 w-[110px] h-[43px] flex items-center justify-center"
-        >zinc700
-      </div>
-        <div
-          class="bg-slate-100 w-[110px] h-[43px] flex items-center justify-center"
-        >zinc500
-      </div>
-        <div
-          class="bg-slate-100 w-[110px] h-[43px] flex items-center justify-center"
-        >zinc300
-      </div>
-        <div
-          class="bg-slate-100 w-[110px] h-[43px] flex items-center justify-center"
-        >zinc100
-      </div>
+       <!-- JS INPUT GOES HERE -->
     </div>
   </body>
   <script src="/script.js"></script>
